<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="title_activity_stock_graph" translatable="false">StockGraphActivity</string>
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    <string name="exitMsg">Exit app?</string>
    <string name="empty_text">Nothing to display</string>
    <string name="invalid_symbol">Invalid stock name</string>
    <string name="stockAlreadyExistMsg">This stock already exists.</string>

    <!--Stock graph screen constants-->
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <string name="oneMonth">1m</string>
    <string name="sixMonth">6m</string>
    <string name="oneYear">1y</string>

    <string name="oneMContentDesc">One Month Graph</string>
    <string name="sixMContentDesc">Six Month Graph</string>
    <string name="oneYContentDesc">One Year Graph</string>



</resources>
