<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/screenBg"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    >


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="GOOG"
        style="@style/GraphTextViewStyle"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:id="@+id/symbolTv"
        android:paddingStart="@dimen/layout_padding"
        android:paddingLeft="@dimen/layout_padding"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="@drawable/legent_gray_btn"
        android:textColor="@android:color/white"
        android:text="@string/oneMonth"
        android:id="@+id/oneMonthBtn"
        android:onClick="onbuttonClick"
        android:contentDescription="@string/oneMContentDesc"/>

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="@drawable/legent_gray_btn"
        android:textColor="@android:color/white"
        android:text="@string/sixMonth"
        android:id="@+id/sixMonthBtn"
        android:onClick="onbuttonClick"
        android:contentDescription="@string/sixMContentDesc"/>

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:background="@drawable/legent_gray_btn"
        android:textColor="@android:color/white"
        android:text="@string/oneYear"
        android:id="@+id/oneYrBtn"
        android:onClick="onbuttonClick"
        android:contentDescription="@string/oneYContentDesc"/>
</LinearLayout>
 </LinearLayout>

    <com.db.chart.view.LineChartView
        xmlns:chart="http://schemas.android.com/apk/res-auto"
        android:id="@+id/stock_linechart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/screenBg"
        android:layout_weight="1"
        android:paddingStart="@dimen/layout_padding"
        android:paddingLeft="@dimen/layout_padding"
        />
</LinearLayout>